@@ -17,6 +17,7 @@ Changes since beta1
 - fixes a bug in HTML renderer where some hX element were not closed properly
 - fixes input in Gemini while online
 - fixes a crash with invalid URL
+- fixes hang/crash when meeting the ";" itemtype in gopher
 - attempt at hiding XMLparsedAsHTMLWarning from BS4 library
 - chafa now used by default everywhere if version > 1.10
 - ignoring encoding error in ansicat
